# gpr200-fa2023-brigham-boice

./: CMakeLists.txt
assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment2_sunset/: main.cpp
assignments/assignment2_sunset/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment3_textures/: main.cpp
assignments/assignment3_textures/assets/: background.frag  character.frag
assignments/assignment4_transformations/: main.cpp
assignments/assignment4_transformations/assets/: vertexShader.vert
assignments/assignment5_camera/: main.cpp
assignments/assignment5_camera/assets/: vertexShader.vert
assignments/assignment6_proceduralGeometry/: main.cpp
assignments/assignment7_lighting/: main.cpp
assignments/assignment7_lighting/assets/: defaultLit.frag
assignments/final_terragen/: CMakeLists.txt  constants.h  main.cpp
assignments/final_terragen/assets/: cloud.frag  defaultLit.frag  defaultLit.vert  stars.frag
core/bb/: camera.h  procGen.cpp  procGen.h  shader.cpp  shader.h  texture.cpp  transformations.h
core/ew/: camera.h  procGen.cpp  procGen.h  transform.h
